--- a/gitops/apps/pihole/app.yaml
+++ b/gitops/apps/pihole/app.yaml
@@ -1,6 +1,6 @@
 appName: pihole
 namespace: pihole
 repoURL: oci://ghcr.io/nunoferna/charts/pihole
-targetRevision: 0.4.7
+targetRevision: HEAD
 syncWave: "3"
 noBase: true
