chore: use pihole experimental versions
Signed-off-by: Nuno Fernandes <nuno.o.fernandes@outlook.pt>

--- a/gitops/apps/pihole/app.yaml
+++ b/gitops/apps/pihole/app.yaml
@@ -1,6 +1,7 @@
 appName: pihole
 namespace: pihole
-repoURL: oci://ghcr.io/nunoferna/charts/pihole
-targetRevision: HEAD
+repoURL: https://github.com/nunoferna/pihole-helm.git
+targetRevision: main
+chartPath: charts/pihole
 syncWave: "3"
 noBase: true
