--- a/gitops/apps/pihole/values.yaml
+++ b/gitops/apps/pihole/values.yaml
@@ -24,6 +24,21 @@ args:
 pihole:
   web:
     skipPasswordEnv: true
+  ftl:
+    dns:
+      listeningMode: "ALL"
+      upstreams:
+        - 1.0.0.1
+        - 1.1.1.1
+      service:
+        enabled: true
+        type: LoadBalancer
+    webserver:
+      tls:
+        cert: ""
+      domain: "pihole.apps.internal"
+      port: "80o,[::]:80o"
+
   lists:
     adlists:
       # HaGeZi Collections
@@ -54,15 +69,6 @@ pihole:
       # Firebog Malicious Lists
       - address: https://v.firebog.net/hosts/Prigent-Crypto.txt
       - address: https://raw.githubusercontent.com/FadeMind/hosts.extras/master/add.Risk/hosts
-    
-  ftl:
-    dns:
-      upstreams:
-        - 1.0.0.1
-        - 1.1.1.1
-      service:
-        enabled: true
-        type: LoadBalancer
 
 metrics:
   enabled: false
