--- a/gitops/apps/tailscale/base/secret.yaml
+++ b/gitops/apps/tailscale/base/secret.yaml
@@ -1,11 +1,2 @@
-apiVersion: v1
-kind: Secret
-metadata:
-  name: operator-oauth
-  namespace: tailscale
-type: Opaque
-stringData:
-  # These values are never used, but the Secret must exist
-  # for the Helm chart to start the Pod.
-  client_id: "placeholder"
-  client_secret: "placeholder"
+# The operator-oauth Secret is now managed by ExternalSecret (externalsecret.yaml).
+# ESO populates client_id and client_secret from Vault path secret/data/tailscale/credentials.
